applications/nginix/01-deployment-nginx.yaml
---
# Create Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    name: nginx
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
