applications/nginix/02-service-nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
  # annotations:
  #   metallb.universe.tf/allow-shared-ip: "nginx"
  # labels:
  #   app.kubernetes.io/instance: authentik-embedded-outpost
  #   app.kubernetes.io/managed-by: goauthentik.io
  #   app.kubernetes.io/name: authentik-proxy
  #   goauthentik.io/outpost-name: authentik-embedded-outpost
  #   goauthentik.io/outpost-type: proxy
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  #type: LoadBalancer
  #externalTrafficPolicy: Local
