applications/nginix/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: traefik
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  #type: LoadBalancer
