applications/nginix/igr-nginx-authentik-mdw.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: nginx
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.pradax.tk`)
      kind: Rule
      priority: 10
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: authentik
          namespace: default
    # - kind: Rule
    #   match: "Host(`nginx.pradax.tk`) && PathPrefix(`/outpost.goauthentik.io/`)"
    #   priority: 15
    #   services:
    #       - kind: Service
    #         name: ak-outpost-authentik-embedded-outpost
    #         port: 9000
  tls:
    store:
      name: default
