applications/nginix/igr-nginx-traefik-mdw.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.pradax.tk`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.pradax.tk`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: traefik-dashboard-basicauth
  tls:
    store:
      name: default
